<resources>
    <string name="app_name">DatabaseTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dbtools">DBTools</string>
    <string name="composerTagInfo">N/A</string>
    <string name="workTagInfo">N/A</string>
    <string name="pieceTagInfo">N/A</string>
    <string name="pieceTextV">Piece</string>
    <string name="compTextV">Composer</string>
    <string name="workTagI">Work</string>
    <string name="albumArt">Artwork</string>


</resources>
