<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:id="@android:id/list"
        android:layout_weight="0.47" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_weight="0.21">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/compTextV"
            android:id="@+id/compTextV"
            android:layout_row="7"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/workTagI"
            android:id="@+id/workTagI"
            android:layout_row="8"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/composerTagInfo"
            android:id="@+id/composerTagInfo"
            android:layout_row="7"
            android:layout_column="17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/workTagInfo"
            android:id="@+id/workTagInfo"
            android:layout_row="8"
            android:layout_column="17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pieceTextV"
            android:id="@+id/pieceTextV"
            android:layout_row="9"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pieceTagInfo"
            android:id="@+id/pieceTagInfo"
            android:layout_row="9"
            android:layout_column="17" />
    </GridLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:id="@+id/albumArt"
        android:layout_weight="0.31"
        android:contentDescription="@string/albumArt" />


</LinearLayout>







